--- a/css/styles.css
+++ b/css/styles.css
@@ -58,14 +58,14 @@ h3 {
 }
 */
 .skill_image {
-    width: 25%;
-    border-radius: 100%;
+    width: 50%;
+    border-radius: 10%;
     float: left;
     margin-right: 30px;
 }
 .skill_image2 {
-    width: 25%;
-    border-radius: 100%;
+    width: 50%;
+    border-radius: 10%;
     float: right;
     margin-left: 30px;
 }
@@ -124,10 +124,13 @@ hr {
 } 
 
 .btn:hover {
-background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+/* background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad); */
+background-image: linear-gradient(to bottom, #a777a7, #a683e3);
+
 }
 .btn {
-    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    /* background-image: linear-gradient(to bottom, #11cdd4, #11999e); */
+    background-image: linear-gradient(to bottom, #8c66b8, #785ca8);
     padding: 10px 20px;
     text-decoration: none;
     font-family: Montserrat, sans-serif;
